--- a/views/sales/invoices.html
+++ b/views/sales/invoices.html
@@ -1,8 +1,7 @@
 <div>
-  <h1>Sales</h1>
+  <h1>Invoices</h1>
 
   <div ng-controller="invoicesController" ng-cloak>
-
     <div>
       <md-button ng-click="prevPage()" ng-disabled="page<2" class="md-raised">&lt;</md-button>
       <md-button ng-click="reloadPage()" class="md-raised">Page {{ page }}</md-button>
@@ -11,14 +10,17 @@
 
     <md-list>
       <md-list-item class="md-2-line" ng-repeat="invoice in invoices">
-        <md-checkbox ng-model="item.done"></md-checkbox>
+        <md-checkbox ng-model="invoice._selected"></md-checkbox>
         <div class="md-list-item-text">
           <h3>{{ invoice.code }}</h3>
           <p>{{ invoice.code }}</p>
         </div>
+        <md-button ng-href="#invoices/92" class="md-secondary md-icon-button">
+          <i class="material-icons">&#xE3C9;</i>
+        </md-button>
       </md-list-item>
     </md-list>
 
-    <md-button class="md-primary md-raised" ng-click="showConfirm($event)"  flex="100"  flex-gt-md="auto">Confirm</md-button>
+    <md-button ng-click="showConfirm($event)" flex="100" flex-gt-md="auto" class="md-primary md-raised">Confirm</md-button>
   </div>
 </div>
