updated to angular-md version 1.1.1

--- a/views/sales/invoices.html
+++ b/views/sales/invoices.html
@@ -16,7 +16,7 @@
           <p>{{ invoice.code }}</p>
         </div>
         <md-button ng-href="#invoices/92" class="md-secondary md-icon-button">
-          <i class="material-icons">&#xE3C9;</i>
+          <md-icon>&#xE3C9;</md-icon>
         </md-button>
       </md-list-item>
     </md-list>
