updated ng version to 1.6.2, ng-material to 1.1.3

--- a/views/sales/invoices.html
+++ b/views/sales/invoices.html
@@ -12,7 +12,7 @@
         <h3>{{ invoice.id }}</h3>
         <p>{{ invoice.code }}</p>
       </div>
-      <md-button ng-href="#invoices/92" class="md-secondary md-icon-button">
+      <md-button ng-href="#!invoices/92" class="md-secondary md-icon-button">
         <md-icon>&#xE3C9;</md-icon>
       </md-button>
     </md-list-item>
